@@ -5046,6 +5046,31 @@ badresp:1,adberr:0,findfail:0,valfail:0]
 	  </varlistentry>
 
 	  <varlistentry>
+	    <term><command>lmdb-mapsize</command></term>
+	    <listitem>
+	      <para>
+		When <command>named</command> is built with liblmdb,
+		this option sets a maximum size for the memory map of
+		the new-zone database (NZD) in LMDB database format.
+		This database is used to store configuration information
+		for zones added using <command>rndc addzone</command>.
+		Note that this is not the NZD database file size, but
+		the largest size that the database may grow to.
+	      </para>
+	      <para>
+		Because the database file is memory mapped, its size is
+		limited by the address space of the named process.  The
+		default of 32 megabytes was chosen to be usable with
+		32-bit <command>named</command> builds.  The largest
+		permitted value is 1 terabyte. Given typical zone
+		configurations without elaborate ACLs, a 32 MB NZD file
+		ought to be able to hold configurations of about 100,000
+		zones.
+	      </para>
+	    </listitem>
+	  </varlistentry>
+
+	  <varlistentry>
 	    <term><command>managed-keys-directory</command></term>
 	    <listitem>
 	      <para>
@@ -5888,6 +5913,29 @@ options {
 		  If <userinput>yes</userinput>, then zones can be
 		  added at runtime via <command>rndc addzone</command>.
 		  The default is <userinput>no</userinput>.
+		</para>
+		<para>
+		  Newly added zones' configuration parameters
+		  are stored so that they can persist after the
+		  server is restarted.  The configuration information
+		  is saved in a file called
+		  <filename><replaceable>viewname</replaceable>.nzf</filename>
+		  (or, if <command>named</command> is compiled with
+		  liblmdb, in an LMDB database file called
+		  <filename><replaceable>viewname</replaceable>.nzd</filename>).
+		  <replaceable>viewname</replaceable> is the name of the
+		  view, unless the view name contains characters that are
+		  incompatible with use as a file name, in which case a
+		  cryptographic hash of the view name is used instead.
+		</para>
+		<para>
+		  Zones added at runtime will have their configuration
+		  stored either in a new-zone file (NZF) or a new-zone
+		  database (NZD) depending on whether
+		  <command>named</command> was linked with
+		  liblmdb at compile time.
+		  See <xref linkend="man.rndc"/> for further details
+		  about <command>rndc addzone</command>.
 		</para>
 	      </listitem>
 	    </varlistentry>
