@@ -1,3 +1,10 @@
+4611.	[bug]		The default LMDB mapsize was too low and caused
+			errors after few thousand zones were added using
+			rndc addzone. A new config option "lmdb-mapsize"
+			has been introduced to configure the LMDB
+			mapsize depending on operational needs.
+			[RT #44954]
+
 4609.	[cleanup]	Rearrange makefiles to enable parallel execution
 			(i.e. "make -j"). [RT #45078]
 
